# CitationClaw

./: .gitignore  .mcp.json  FLOW_ANALYSIS.md  README.md  README.zh-CN.md  count_papers.py  pyproject.toml  requirements.txt  start.py
.codex-plugin/: plugin.json
app/: browser_controller.py  config_manager.py  cost_tracker.py  log_manager.py  main.py  task_executor.py
citationclaw/: __main__.py  agent.py  agent_cli.py  mcp_server.py
citationclaw/agent/: __init__.py  skills_loader.py  task_coordinator.py
citationclaw/app/: config_manager.py  log_manager.py  main.py  task_executor.py
citationclaw/config/: prompt_loader.py  provider_manager.py  providers.yaml  rules_loader.py
citationclaw/core/: __init__.py  affiliation_validator.py  arxiv_client.py  author_name_utils.py  author_searcher.py  browser_manager.py  citing_description_cache.py  citing_description_searcher.py  dashboard_generator.py  dashboard_test.py  exporter.py  http_utils.py  metadata_cache.py  metadata_collector.py  openalex_client.py  pdf_author_extractor.py  pdf_downloader.py  pdf_mineru_parser.py  pdf_parser.py  phase1_cache.py  pipeline_adapter.py  s2_client.py  scholar_prefilter.py  scholar_search_agent.py  scraper.py  self_citation.py  structured_author_fetcher.py  url_finder.py
citationclaw/skills/: __init__.py  base.py  phase1_citation_fetch.py  phase2_author_intel.py  phase2_metadata.py  phase3_export.py  phase3_scholar_assess.py  phase4_citation_desc.py  phase4_citation_extract.py  phase5_report.py  registry.py  runtime.py
citationclaw/templates/: base.html  index.html
core/: author_searcher.py  author_searcher_legacy.py  author_searcher_new.py.bak  citing_description.py  citing_description_searcher.py  dashboard_generator.py  dashboard_test.py  exporter.py  scraper.py  url_finder.py
cyf/: 0409bug.md
data/result-260225-template/: paper-20260225_022927_results_all_renowned_scholar.xlsx  paper-20260225_022927_results_top-tier_scholar.xlsx  paper-20260225_022927_results_with_citing_desc.xlsx  (+1 more)
docs/: agent-usage.md  demo1.html  demo2.html  guide.html  guidelines.html  index.html  technical-report.html  use-report.html
docs/plans/: 2026-03-15-phase1-cache.md  (+4 more)
scripts/: launch_edge_debug.ps1
templates/: base.html  config.html  index.html  results.html  task.html
test/: test_agent_adapter.py  test_arxiv_client.py  test_browser_manager.py  test_citation_desc_source.py  test_citing_description_cache.py  test_institution_stats.py  test_metadata_collector.py  test_new_pipeline_e2e.py  test_openalex_client.py  test_pdf_downloader.py  test_pdf_parser.py  test_pdf_pipeline.py  test_phase2_metadata.py  test_phase3_scholar_assess.py  test_phase4_citation_extract.py  test_pipeline_adapter.py  test_prompt_loader.py  test_provider_manager.py  test_rules_loader.py  test_s2_client.py  test_scholar_prefilter.py  test_scholar_search_agent.py  test_scholar_search_validation.py  test_self_citation_count.py  test_self_citation_detector.py
(+38 files in other folders)
